--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,7 @@
 platform = espressif8266
 board = d1_mini
 framework = arduino
-
+monitor_speed = 115200
 
 lib_deps =
     arduino-libraries/NTPClient
