mini version passt

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,8 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:d1_mini]
+; Common settings for all environments
+[env]
 platform = espressif8266
 board = d1_mini
 framework = arduino
@@ -20,3 +21,24 @@ lib_deps =
     mathertel/OneButton
     knolleary/PubSubClient
     bblanchon/ArduinoJson
+
+; Deutsche Version (11x11 Matrix, 121 LEDs)
+[env:deutsche_11x11]
+build_flags = 
+    -DVERSION_TYPE=0
+    -DMATRIX_SIZE=11
+    -DLED_COUNT=121
+
+; Bayrische Version (11x11 Matrix, 121 LEDs)
+[env:bayrisch_11x11]
+build_flags = 
+    -DVERSION_TYPE=1
+    -DMATRIX_SIZE=11
+    -DLED_COUNT=121
+
+; Mini Version (8x8 Matrix, 64 LEDs)
+[env:mini_8x8]
+build_flags = 
+    -DVERSION_TYPE=2
+    -DMATRIX_SIZE=8
+    -DLED_COUNT=64
