--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,7 @@ platform = espressif8266
 board = d1_mini
 framework = arduino
 monitor_speed = 115200
+extra_scripts = post:rename_firmware.py
 
 lib_deps =
     arduino-libraries/NTPClient
