--- a/platformio.ini
+++ b/platformio.ini
@@ -23,23 +23,47 @@ lib_deps =
     knolleary/PubSubClient
     bblanchon/ArduinoJson
 
-; Deutsche Version (11x11 Matrix, 121 LEDs)
+; Deutsche Version (11x11 Matrix, 121 LEDs) - NTP Mode
 [env:deutsche_11x11]
 build_flags = 
     -DVERSION_TYPE=0
     -DMATRIX_SIZE=11
     -DLED_COUNT=121
 
-; Bayrische Version (11x11 Matrix, 121 LEDs)
+; Bayrische Version (11x11 Matrix, 121 LEDs) - NTP Mode
 [env:bayrisch_11x11]
 build_flags = 
     -DVERSION_TYPE=1
     -DMATRIX_SIZE=11
     -DLED_COUNT=121
 
-; Mini Version (8x8 Matrix, 64 LEDs)
+; Mini Version (8x8 Matrix, 64 LEDs) - NTP Mode
 [env:mini_8x8]
 build_flags = 
     -DVERSION_TYPE=2
     -DMATRIX_SIZE=8
     -DLED_COUNT=64
+
+; Deutsche Version (11x11 Matrix, 121 LEDs) - RCT Mode
+[env:deutsche_11x11_rct]
+build_flags = 
+    -DVERSION_TYPE=0
+    -DMATRIX_SIZE=11
+    -DLED_COUNT=121
+    -DUSE_RCT
+
+; Bayrische Version (11x11 Matrix, 121 LEDs) - RCT Mode
+[env:bayrisch_11x11_rct]
+build_flags = 
+    -DVERSION_TYPE=1
+    -DMATRIX_SIZE=11
+    -DLED_COUNT=121
+    -DUSE_RCT
+
+; Mini Version (8x8 Matrix, 64 LEDs) - RCT Mode
+[env:mini_8x8_rct]
+build_flags = 
+    -DVERSION_TYPE=2
+    -DMATRIX_SIZE=8
+    -DLED_COUNT=64
+    -DUSE_RCT
